--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="format-detection" content="telephone=no" />
   <title>TripSplit – Divisor de gastos</title>
   <style>
     :root{--bg:#f6f7f8;--panel:#fff;--text:#111;--muted:#6b7280;--border:#e5e7eb;--primary:#111;--primary-contrast:#fff;--danger:#b91c1c;--ok:#065f46}
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;-webkit-text-size-adjust:100%}
     header{position:sticky;top:0;backdrop-filter:saturate(180%) blur(10px);background:rgba(255,255,255,.85);border-bottom:1px solid var(--border);z-index:50}
     .container{max-width:1000px;margin:0 auto;padding:16px}
     h1{font-size:22px;margin:0;font-weight:900;letter-spacing:-.02em}
     .chip{display:inline-flex;align-items:center;font-size:12px;border:1px solid var(--border);border-radius:999px;padding:2px 8px;margin-left:8px}
     .row{display:flex;gap:8px;align-items:center}
-    .btn{border:1px solid var(--border);background:#fff;border-radius:10px;padding:8px 12px;cursor:pointer}
+    a, button, summary{color:inherit;-webkit-tap-highlight-color:transparent}
+    .btn{border:1px solid var(--border);background:#fff;border-radius:10px;padding:8px 12px;cursor:pointer;color:inherit}
     .btn:hover{background:#f3f4f6}
     .btn.primary{background:var(--primary);color:var(--primary-contrast);border-color:var(--primary)}
     .btn.danger{color:var(--danger);border-color:var(--danger)}
@@ -21,10 +24,10 @@
     section.panel h2{margin:0 0 12px 0;font-size:18px}
     label.block{display:block}
     .label{font-size:12px;color:var(--muted);margin-bottom:4px}
-    input,select,textarea{width:100%;border:1px solid var(--border);border-radius:10px;padding:8px 10px;background:#fff}
+    input,select,textarea{width:100%;border:1px solid var(--border);border-radius:10px;padding:8px 10px;background:#fff;color:inherit}
     .grid{display:grid;gap:10px}
     @media(min-width:780px){.grid-6{grid-template-columns:repeat(6,1fr)}}
-    .pill{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--border);border-radius:14px;padding:8px 12px;background:#fff;white-space:nowrap}
+    .pill{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--border);border-radius:14px;padding:8px 12px;background:#fff;white-space:nowrap;color:inherit}
     .pill.active{background:#000;color:#fff;border-color:#000}
     table{width:100%;border-collapse:collapse;font-size:14px}
     th,td{padding:8px 10px;border-bottom:1px solid var(--border);text-align:left}
@@ -50,10 +53,7 @@
       </div>
       <div class="row">
         <button id="btnShare" class="btn">Compartir link</button>
-        <button id="btnExport" class="btn">Exportar JSON</button>
-        <label class="btn" style="cursor:pointer">Importar JSON
-          <input id="fileImport" type="file" accept="application/json" style="display:none" />
-        </label>
+        <!-- Se quitaron Exportar/Importar JSON a pedido -->
       </div>
     </div>
     <div class="container" style="padding-top:0">
@@ -63,6 +63,7 @@
         <button class="tab" data-tab="gastos">Gastos cargados</button>
         <button class="tab" data-tab="saldos">Saldos</button>
         <button class="tab" data-tab="transferencias">Transferencias</button>
+        <button class="tab" data-tab="categorias">Categorías</button>
       </nav>
     </div>
   </header>
@@ -70,7 +71,10 @@
   <main class="container" id="app"></main>
 
   <script>
-    // ---------- Estado y utilidades ----------
+    const CATEGORIES = [
+      'Comida','Transporte','Alojamiento','Entretenimiento','Compras','Combustible','Tours','Otros'
+    ];
+
     const state = {
       currency: '$',
       participants: [ { id: uid(), name: 'Ana' }, { id: uid(), name: 'Juan' } ],
@@ -135,10 +139,10 @@
 
     function nameById(id){ const p=state.participants.find(p=>p.id===id); return p? p.name : '(?)'; }
 
-    // ---------- Render ----------
     function ensureDraft(fromExpense){
       if(fromExpense){ state.draft = JSON.parse(JSON.stringify(fromExpense)); return; }
-      if(!state.draft){ state.draft = { id: uid(), desc:'', amount:0, date: new Date().toISOString().slice(0,10), payerId: (state.participants[0]?.id) || null, involvedIds: state.participants.map(p=>p.id), split: { mode:'equal' } }; }
+      if(!state.draft){ state.draft = { id: uid(), desc:'', amount:0, date: new Date().toISOString().slice(0,10), payerId: (state.participants[0]?.id) || null, involvedIds: state.participants.map(p=>p.id), split: { mode:'equal' }, category: CATEGORIES[0] };
+      } else if(!state.draft.category){ state.draft.category = CATEGORIES[0]; }
       state.draft.payerId = (state.draft.payerId ?? (state.participants[0]?.id)) || null;
       state.draft.involvedIds = state.draft.involvedIds?.filter(id=>state.participants.find(p=>p.id===id)) || [];
       if(state.draft.involvedIds.length===0) state.draft.involvedIds = state.participants.map(p=>p.id);
@@ -149,7 +153,6 @@
       const {balances, totals} = computeBalancesAndTotals();
       const settlements = computeSettlements(balances);
 
-      // Tabs active state
       document.querySelectorAll('.tab').forEach(t=>{
         t.classList.toggle('active', t.dataset.tab===state.activeTab);
         t.onclick=()=>{ state.activeTab=t.dataset.tab; render(); };
@@ -161,16 +164,15 @@
       if(state.activeTab==='gastos') html += renderGastos();
       if(state.activeTab==='saldos') html += renderSaldos(balances, totals);
       if(state.activeTab==='transferencias') html += renderTransfers(settlements);
+      if(state.activeTab==='categorias') html += renderCategorias();
 
       app.innerHTML = html;
 
-      // attach listeners for each tab after mount
       if(state.activeTab==='viajeros') bindViajeros();
       if(state.activeTab==='nuevo') bindNuevo();
       if(state.activeTab==='gastos') bindGastos();
     }
 
-    // ====== TABS RENDERERS ======
     function renderViajeros(){
       return `
       <section class="panel">
@@ -212,6 +214,11 @@
               ${['equal','shares','percent','exact'].map(m=>`<option value="${m}" ${state.draft.split.mode===m?'selected':''}>${({equal:'Partes iguales',shares:'Por ponderaciones',percent:'Por porcentaje',exact:'Montos exactos'})[m]}</option>`).join('')}
             </select>
           </label></div>
+          <div class="col"><label class="block"><div class="label">Categoría</div>
+            <select id="gCategory">
+              ${CATEGORIES.map(c=>`<option value="${c}" ${c===state.draft.category?'selected':''}>${c}</option>`).join('')}
+            </select>
+          </label></div>
         </div>
         <div class="spacer"></div>
         <div class="label">¿Quiénes participan de este gasto?</div>
@@ -237,12 +244,13 @@
         ${state.expenses.length===0 ? `<div class="muted">Todavía no hay gastos.</div>` : `
           <div style="overflow-x:auto">
             <table>
-              <thead><tr><th>Fecha</th><th>Descripción</th><th>Pagó</th><th>Incluye</th><th>División</th><th class="right">Monto</th><th></th></tr></thead>
+              <thead><tr><th>Fecha</th><th>Descripción</th><th>Categoría</th><th>Pagó</th><th>Incluye</th><th>División</th><th class="right">Monto</th><th></th></tr></thead>
               <tbody>
                 ${state.expenses.map(e=>`
                   <tr>
                     <td>${e.date}</td>
                     <td>${e.desc? escapeHtml(e.desc) : '<span class="muted">(sin nota)</span>'}</td>
+                    <td>${escapeHtml(e.category || 'Otros')}</td>
                     <td>${escapeHtml(nameById(e.payerId))}</td>
                     <td>${e.involvedIds.map(nameById).map(escapeHtml).join(', ')}</td>
                     <td>${({equal:'= iguales',shares:'∝ ponderaciones',percent:'% porcentajes',exact:'= exactos'})[e.split?.mode||'equal']}</td>
@@ -253,7 +261,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td colspan="7">
+                    <td colspan="8">
                       <details class="summary-row"><summary>Ver detalle por persona</summary>
                         ${renderExpenseBreakdown(e)}
                       </details>
@@ -303,7 +311,33 @@
       </section>`;
     }
 
-    // ====== BINDERS ======
+    function renderCategorias(){
+      // agregados por categoría
+      const totalsByCat = {};
+      let grand = 0, countByCat = {};
+      for(const e of state.expenses){
+        const cat = e.category || 'Otros';
+        const amt = parseAmount(e.amount) || 0; if(amt<=0) continue;
+        totalsByCat[cat] = (totalsByCat[cat]||0) + amt; grand += amt;
+        countByCat[cat] = (countByCat[cat]||0) + 1;
+      }
+      const cats = Object.keys(totalsByCat).sort((a,b)=> totalsByCat[b]-totalsByCat[a]);
+      return `
+      <section class="panel">
+        <h2>Gastos por categoría</h2>
+        ${cats.length===0 ? '<div class="muted">Todavía no hay gastos.</div>' : `
+        <div style="overflow-x:auto">
+          <table>
+            <thead><tr><th>Categoría</th><th class="right">Total</th><th class="right">%</th><th class="right">Items</th></tr></thead>
+            <tbody>
+              ${cats.map(c=>`<tr><td>${escapeHtml(c)}</td><td class="right"><b>${state.currency} ${formatAmount(totalsByCat[c])}</b></td><td class="right">${grand? (totalsByCat[c]*100/grand).toFixed(1):'0.0'}%</td><td class="right">${countByCat[c]}</td></tr>`).join('')}
+            </tbody>
+            <tfoot><tr><th>Total</th><th class="right">${state.currency} ${formatAmount(grand)}</th><th></th><th class="right">${cats.reduce((a,c)=>a+countByCat[c],0)}</th></tr></tfoot>
+          </table>
+        </div>`}
+      </section>`;
+    }
+
     function bindViajeros(){
       document.getElementById('inpCurrency').addEventListener('input', e=>{ state.currency=e.target.value; saveLocal(); });
       document.getElementById('btnAddPerson').addEventListener('click', ()=>{
@@ -323,20 +357,18 @@
     }
 
     function bindNuevo(){
-      // Draft inputs
       document.getElementById('gDesc').addEventListener('input', e=>{ state.draft.desc=e.target.value; });
       document.getElementById('gAmount').addEventListener('input', e=>{ state.draft.amount=e.target.value; });
       document.getElementById('gDate').addEventListener('input', e=>{ state.draft.date=e.target.value; });
       document.getElementById('gPayer').addEventListener('change', e=>{ state.draft.payerId=e.target.value; });
       document.getElementById('gMode').addEventListener('change', e=>{ state.draft.split={ mode:e.target.value }; render(); });
-      // Participant toggles (botones, no checkboxes) → arregla superposición en móvil
+      document.getElementById('gCategory').addEventListener('change', e=>{ state.draft.category=e.target.value; });
       document.querySelectorAll('[data-tgl]').forEach(btn=> btn.addEventListener('click', ()=>{
         const id=btn.getAttribute('data-tgl'); const set=new Set(state.draft.involvedIds);
         if(set.has(id)) set.delete(id); else set.add(id);
         state.draft.involvedIds=[...set]; state.draft.split = sanitizeSplitForParticipants(state.draft.split, state.draft.involvedIds);
         render();
       }));
-      // Extra split fields
       document.querySelectorAll('[data-share]').forEach(inp=> inp.addEventListener('input', e=>{ state.draft.split.shares = {...(state.draft.split.shares||{}), [inp.dataset.share]: inp.value }; }));
       document.querySelectorAll('[data-percent]').forEach(inp=> inp.addEventListener('input', e=>{ state.draft.split.percents = {...(state.draft.split.percents||{}), [inp.dataset.percent]: inp.value }; }));
       document.querySelectorAll('[data-exact]').forEach(inp=> inp.addEventListener('input', e=>{ state.draft.split.exact = {...(state.draft.split.exact||{}), [inp.dataset.exact]: inp.value }; }));
@@ -395,20 +427,6 @@
     function escapeHtml(s){ return String(s).replace(/[&<>"']/g, m=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[m])); }
     function cssVar(name){ return getComputedStyle(document.documentElement).getPropertyValue(name) || '' }
 
-    // ---------- Acciones de barra superior ----------
-    document.getElementById('btnExport').addEventListener('click', ()=>{
-      const payload = { currency: state.currency, participants: state.participants, expenses: state.expenses };
-      const blob = new Blob([JSON.stringify(payload,null,2)], {type:'application/json'});
-      const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='tripsplit.json'; a.click();
-    });
-    document.getElementById('fileImport').addEventListener('change', (e)=>{
-      const f=e.target.files?.[0]; if(!f) return; const reader=new FileReader(); reader.onload=()=>{
-        try{ const data=JSON.parse(reader.result);
-          if(data.participants && data.expenses){ state.currency=data.currency??'$'; state.participants=data.participants; state.expenses=data.expenses; state.draft=null; saveLocal(); render(); }
-          else alert('Archivo inválido');
-        }catch(err){ alert('No se pudo leer el archivo'); }
-      }; reader.readAsText(f);
-    });
     document.getElementById('btnShare').addEventListener('click', ()=>{
       const payload = { currency: state.currency, participants: state.participants, expenses: state.expenses };
       const url = location.origin + location.pathname + encodeStateForURL(payload);
@@ -416,11 +434,12 @@
       else { prompt('Copiá este link:', url); }
     });
 
-    // ---------- Inicializar ----------
     (function init(){
       const urlState = decodeStateFromURL();
-      if(urlState && urlState.participants){ state.currency=urlState.currency??'$'; state.participants=urlState.participants; state.expenses=urlState.expenses||[]; }
+      if(urlState && urlState.participants){ state.currency=urlState.currency??'$'; state.participants=urlState.participants; state.expenses=(urlState.expenses||[]).map(e=>({...e, category:e.category||'Otros'})); }
       else { loadLocal(); }
+      // backfill categorías si faltan
+      state.expenses = state.expenses.map(e=> ({...e, category: e.category || 'Otros'}));
       render();
     })();
   </script>
