--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .pill.active{background:#000;color:#fff;border-color:#000}
     .btn{border:1px solid var(--border);background:#fff;border-radius:10px;padding:8px 12px;cursor:pointer}
     .btn.danger{color:var(--danger);border-color:var(--danger)}
-    .btn.success{background:#d1fae5;border-color:#a7f3d0;color:#065f46}
+    .btn.success{background:#d1fae5;border-color:#a7f3d0;color:#22c55e}
     .btn.success:hover{filter:brightness(0.98)}
     .prefix-input{position:relative} .prefix-input .prefix{position:absolute;left:10px;top:50%;transform:translateY(-50%);pointer-events:none;color:#9ca3af} .prefix-input input{padding-left:28px} .prefix-input input::placeholder{color:#d1d5db}
     table{width:100%;border-collapse:collapse;font-size:14px} th,td{padding:8px 10px;border-bottom:1px solid var(--border);text-align:left} td.right{text-align:right}
@@ -119,8 +119,7 @@
       return `
       <section class="panel">
         <h2>Viajeros</h2>
-        <div class="spacer"></div>
-        <div class="row" style="gap:8px;align-items:flex-end;flex-wrap:wrap">
+                <div class="row" style="gap:8px;align-items:flex-end;flex-wrap:wrap">
           <div style="flex:1;min-width:220px"><label class="block"><div class="label">Nuevo viajero</div><input id="inpNewName" placeholder="Nombre"></label></div>
           <button id="btnAddPerson" class="btn">Agregar</button>
         </div>
@@ -190,7 +189,7 @@
 
         ${state.draft.split.mode!=='equal' ? extraSplitInputsHTML() : ''}
 
-        <div class="spacer"></div>
+        <div class="spacer" style="height:16px"></div>
         <div class="row" style="justify-content:space-between">
           <button id="btnClearExpense" class="btn">Limpiar</button>
           ${isEditing? '<button id="btnSaveEdit" class="btn success">Guardar cambios</button>' : '<button id="btnAddExpense" class="btn success">Agregar gasto</button>'}
@@ -211,7 +210,7 @@
                 <tr>
                   <td>${e.date}</td><td>${e.desc? escapeHtml(e.desc) : '<span class="muted">(sin nota)</span>'}</td><td>${escapeHtml(e.category||'Otros')}</td>
                   <td>${escapeHtml(nameById(e.payerId))}</td><td>${e.involvedIds.map(nameById).map(escapeHtml).join(', ')}</td>
-                  <td>${({equal:'= iguales',shares:'∝ ponderaciones',percent:'% porcentajes',exact:'= exactos'})[e.split?.mode||'equal']}</td>
+                  <td>${({equal:'=',shares:'∝',percent:'%',exact:'≡'})[e.split?.mode||'equal']}</td>
                   <td class="right"><b>$ ${formatAmount(e.amount)}</b></td>
                   <td class="right">
                     <button class="btn" data-edit-exp="${e.id}">Editar</button>
@@ -237,7 +236,7 @@
           <div class="col"><label class="block"><div class="label">Monto</div><div class="prefix-input"><span class="prefix">$</span><input id="pAmount" placeholder="$0,00" inputmode="decimal"></div></label></div>
           <div class="col" style="grid-column: span 2"><label class="block"><div class="label">Nota (opcional)</div><input id="pNote" placeholder="Transferencia, efectivo, etc."></label></div>
         </div>
-        <div class="spacer"></div>
+        <div class="spacer" style="height:16px"></div>
         <div class="row"><button id="btnAddPayment" class="btn success">Agregar pago</button></div>
       </section>
       <section class="panel">
@@ -300,8 +299,8 @@
     }
 
     function renderResumen(){
-      const totals={}, count={}, cats=[]; let grand=0;
-      for(const e of state.expenses){const cat=e.category||'Otros'; const amt=parseAmount(e.amount)||0; if(amt<=0) continue; totals[cat]=(totals[cat]||0)+amt; count[cat]=(count[cat]||0)+1; grand+=amt;}
+      const totals={}, cats=[]; let grand=0;
+      for(const e of state.expenses){const cat=e.category||'Otros'; const amt=parseAmount(e.amount)||0; if(amt<=0) continue; totals[cat]=(totals[cat]||0)+amt; grand+=amt;}
       const keys=Object.keys(totals).sort((a,b)=>totals[b]-totals[a]);
       return `
       <section class="panel">
@@ -311,11 +310,11 @@
             <canvas id="pie" width="320" height="320"></canvas>
             <div style="flex:1;min-width:260px;overflow-x:auto">
               <table>
-                <thead><tr><th>Categoría</th><th class="right">Total</th><th class="right">%</th><th class="right">Items</th></tr></thead>
+                <thead><tr><th>Categoría</th><th class="right">Total</th><th class="right">%</th></tr></thead>
                 <tbody>
-                  ${keys.map(c=>`<tr><td>${escapeHtml(c)}</td><td class="right"><b>$ ${formatAmount(totals[c])}</b></td><td class="right">${grand? (totals[c]*100/grand).toFixed(1):'0.0'}%</td><td class="right">${count[c]}</td></tr>`).join('')}
+                  ${keys.map(c=>`<tr><td>${escapeHtml(c)}</td><td class="right"><b>$ ${formatAmount(totals[c])}</b></td><td class="right">${grand? (totals[c]*100/grand).toFixed(1):'0.0'}%</td></tr>`).join('')}
                 </tbody>
-                <tfoot><tr><th>Total</th><th class="right">$ ${formatAmount(grand)}</th><th></th><th class="right">${keys.reduce((a,c)=>a+count[c],0)}</th></tr></tfoot>
+                <tfoot><tr><th>Total</th><th class="right">$ ${formatAmount(grand)}</th><th></th></tr></tfoot>
               </table>
             </div>
           </div>`}
