--- a/index.html
+++ b/index.html
@@ -9,19 +9,8 @@
 <body>
   <header>
     <div class="container row" style="justify-content:space-between">
-      <div class="row"><h1>TripSplit</h1><span class="chip">Divisor de gastos</span></div>
-      <div class="row">
-        <button id="btnShare" class="btn">Compartir link</button>
-      </div>
-    </div>
-    <div class="container tripbar">
-      <div class="row" style="gap:8px;flex-wrap:wrap">
-        <select id="tripSelect" class="trip-select"></select>
-        <button id="btnAddTrip" class="btn">+ Agregar viaje</button>
-      </div>
-      <div class="row" style="margin-top:8px">
-        <input id="tripName" class="trip-title" placeholder="Nombre del viaje">
-      </div>
+      <div class="row"><h1 id="tripTitle" class="app-title" title="Cambiar nombre o viaje" tabindex="0">Viaje 01</h1></div>
+      <div class="row"><button id="btnShare" class="btn">Compartir link</button></div>
     </div>
     <div class="container" style="padding-top:0">
       <nav class="tabs">
@@ -38,7 +27,6 @@
   <div id="status" style="display:none"></div>
 
   <script>
-    // Config: BIN hardcoded for your project
     window.TRIPSPLIT_BIN_ID = "68c46f61ae596e708fecaebe";
   </script>
   <script src="js/app.js"></script>
